# smart-hold-mvp

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
backend/: config.py  main.py  pyproject.toml
backend/src/api/: routes.py
backend/src/core/: coach.py  constants.py  deck.py  evaluator.py  simulator.py  strategy.py
backend/src/models/: poker.py
backend/src/tests/: test_game_loop.py  test_poker_api.py
frontend/: next.config.ts
frontend/app/: page.tsx
