[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-openai>=1.2.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
[project.scripts]
dev = "uvicorn src.main:app --reload"

[dependency-groups]
dev = [
    "playwright>=1.59.0",
]
